--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,11 @@
     "cSpell.language": "fr,en",
     "cSpell.words": [
       "apparait",
+      "Buvron",
       "comsoc",
       "copeland",
       "coverprofile",
+      "github",
       "ints",
       "n'apparait",
       "prefs",
