--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
       "coverprofile",
       "github",
       "ints",
+      "kemeny",
+      "Kemeny",
       "n'apparait",
       "prefs",
       "statuscode"
